<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Earth Live</string>
    <string name="change_wallpaper">change wallpaper</string>
    <string name="test_display">Test display</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="no_update">"Wallpaper is latest."</string>

    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="open_source">Open source</string>

    <string name="setting_wallpaper">"Wallpaper"</string>
    <string name="data_from">Data from</string>
    <string name="wallpaper_size">Wallpaper size</string>
    <string name="update_cycle">Update cycle</string>
    <string name="other">Other</string>
    <string name="japan">Himawari 8(Japan)</string>
    <string name="china">FY-4A(China)</string>
    <string name="usa">GOES-16(USA)</string>
    <string name="minus_10">10 minus</string>
    <string name="minus_30">30 minus</string>
    <string name="minus_60">1 hour</string>
    <string name="size_1080p">1920*1080</string>
    <string name="size_720p">1280*720</string>
    <string name="expected_data_traffic">Expected data traffic consumption per hour</string>
    <string name="check_update">Check update</string>

    <string name="value_japan" translatable="false">1</string>
    <string name="value_china" translatable="false">2</string>
    <string name="value_usa" translatable="false">3</string>
    <string name="value_10_minus" translatable="false">10</string>
    <string name="value_30_minus" translatable="false">30</string>
    <string name="value_60_minus" translatable="false">60</string>
    <string name="value_720p" translatable="false">720</string>
    <string name="value_1080p" translatable="false">1080</string>
    <string name="notification_title">Earth live is running</string>
    <string name="notification_message">Data from:<xliff:g id="from">%s</xliff:g>.Update:<xliff:g id="cycle">%s</xliff:g></string>
    <string name="automatic_update">Automatic update wallpaper</string>
    <string name="wifi_only">Wi-Fi only</string>
    <string name="network_summary">Automatically update wallpapers only under Wi-Fi</string>
    <string name="unknown">Unknown</string>
    <string name="network_error">The network is abnormal and cannot update the wallpaper.</string>
    <string name="auto_help">Add apps to the whitelist and keep updating the wallpaper automatically.</string>
    <string name="set_wallpaper_success">Set wallpaper successfully</string>
    <string name="set_wallpaper_fail">Set wallpaper fail</string>
    <string name="no_permission_title">No permission,exit now</string>
    <string name="no_permission_message">The application must use storage permission, and if you deny authorization, you will not be able to use the application.</string>

    <string name="source" translatable="false">
\tCopyright (c) [2019] [Dipper]\n
\n
\tLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n
\n
\thttp://www.apache.org/licenses/LICENSE-2.0\n
\n
\tUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n
    </string>
    <string name="no_permission_ok">Got it</string>
    <string name="version">Version V<xliff:g id="version">%s</xliff:g></string>
    <string name="gitee" translatable="false">Gitee</string>
    <string name="github" translatable="false">Github</string>
    <string name="wifi_only_notification">Update wallpaper only under Wi-Fi network</string>
    <string name="feedback">Feedback</string>
    <string name="email_title">About EarthLive feedback</string>
    <string name="help">Help</string>
    <string name="checking">Checking…</string>
    <string name="about_data_from">Data From</string>
    <string name="nict">NICT ScienceCloud</string>
    <string name="nsmc">NSMC</string>
    <string name="exit_ready">Click again to exit the app</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_email_client_title">Feedback</string>
    <string name="no_email_client_message">Please send feedback message to:dipper.difference@gmail.com</string>
    <string name="feedback_github">Feedback via github issue</string>
    <string name="new_application_released">New version</string>
    <string name="released_message">Find new application,version name:<xliff:g id="version name">%s</xliff:g></string>
    <string name="next_time">Next time</string>
    <string name="downlaod_now">Download now</string>
</resources>
