<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ToolbarMenu"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_normal_font" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/wallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar" />

    <Button
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/change"
        android:layout_centerHorizontal="true"
        android:text="@string/test_display"
        android:visibility="gone" />

    <Button
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/size_normal"
        android:text="@string/change_wallpaper"
        android:visibility="gone" />

    <Button
        android:id="@+id/set_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/size_normal"
        android:background="#00ffffff"
        android:text="@string/set_wallpaper"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_normal_font" />

    <ImageView
        android:id="@+id/renew"
        android:layout_width="@dimen/size_renew_size"
        android:layout_height="@dimen/size_renew_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/size_normal"
        android:background="@drawable/ic_renew" />
</RelativeLayout>