<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_large"
                android:lineSpacingExtra="5dp"
                android:text="@string/source"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_large"
                android:layout_marginEnd="@dimen/size_normal"
                android:layout_marginTop="@dimen/size_normal"
                android:layout_marginBottom="@dimen/size_normal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gitee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gitee"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/url_gitee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_large"
                android:layout_marginEnd="@dimen/size_normal"
                android:layout_marginTop="@dimen/size_normal"
                android:layout_marginBottom="@dimen/size_normal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/url_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>